testdata/zkc/invalid/inline_03.zkc
//error:3:1-10:cannot inline entry function
#[inline]
fn main() {
    var x:u8 = 0
}
